--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-profile></app-profile>
-
-<!--<router-outlet></router-outlet>-->
+<nostromo-header></nostromo-header>
+<main class="main-container">
+    <router-outlet></router-outlet>
+</main>
