add recipe module

--- a/src/app/modules/recipes/recipe-landing/recipe-landing.component.html
+++ b/src/app/modules/recipes/recipe-landing/recipe-landing.component.html
@@ -1,3 +1,9 @@
-<p>
-  recipe-landing works!
-</p>
+<nostromo-recipe-header></nostromo-recipe-header>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+        <nostromo-recipes-all></nostromo-recipes-all>
+        <nostromo-shopping-list></nostromo-shopping-list>
+    </div>
+  </div>
+</div>
