added scss change

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,4 @@ article {margin-bottom: 10em;}
 
 .list-unstyled {list-style: none;}
 
-//test
-//started v 7 , added change want 8 remotely
-
-// adding change started at 8 , making change , want to see v9 remote
+//started 13 make change want 14 remote
