--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,4 @@ article {margin-bottom: 10em;}
 
 .list-unstyled {list-style: none;}
 
-//started 13 make change want 14 remote
+//started 24 want 25
