--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,4 @@ article {margin-bottom: 10em;}
 
 .list-unstyled {list-style: none;}
 
-//started 26 want 27
-
-// second commit without push 26 -> 27
+//change
