feat: add github deploy

--- a/src/app/modules/interactions/daughter/daughter.component.html
+++ b/src/app/modules/interactions/daughter/daughter.component.html
@@ -25,6 +25,6 @@
           <strong class="text-warning"
           *ngIf="element.type === 'blueprint'">{{ element.content }}</strong>
       </p>
-      <button (click)="invokeEmitter(nando, $event)" type="button" class="btn btn-info btn-sm float-right">Delete</button>
+      <button (click)="invokeEmitter(nando)" type="button" class="btn btn-info btn-sm float-right">Delete</button>
     </div>
 </div>
